update links to bots

--- a/src/TfsBot.Application/Views/Home/Index.cshtml
+++ b/src/TfsBot.Application/Views/Home/Index.cshtml
@@ -34,9 +34,16 @@
                 <li>Go to your TFS/VS online setting project setting page / service hooks and add <strong>Web Hooks</strong> with urls which bot sent you.</li>
             </ol>
         </p>
-        <a href="https://join.skype.com/bot/3e10e4d3-aa2e-4965-b2d6-bfec88c8a806" target="_blank">
-            <img src="https://dev.botframework.com/Client/Images/Add-To-Skype-Buttons.png">
-        </a>
+        <div>
+            <a href="https://join.skype.com/bot/43eb7535-b808-4a65-9ed4-9674e8707993" target="_blank">
+                <img src="https://dev.botframework.com/Client/Images/Add-To-Skype-Buttons.png">
+            </a>
+        </div>
+        <div>
+            <a href='https://telegram.me/etr_tfs_bot'>
+                @{<text>@etr_tfs_bot</text>}
+            </a>
+        </div>
     </div>
 </body>
 </html>
