fix razor markup

--- a/src/TfsBot.Application/Views/Home/Index.cshtml
+++ b/src/TfsBot.Application/Views/Home/Index.cshtml
@@ -30,7 +30,7 @@
         <p>
             After you add the bot to your team chat you need to do two things
             <ol>
-                <li>Send <strong>setup</strong> message to tfs bot: <code>@@tfsbot setup</code></li>
+                <li>Send <strong>setup</strong> message to tfs bot: <code>@@etr_tfs_bot setup</code></li>
                 <li>Go to your TFS/VS online setting project setting page / service hooks and add <strong>Web Hooks</strong> with urls which bot sent you.</li>
             </ol>
         </p>
@@ -41,7 +41,7 @@
         </div>
         <div>
             <a href='https://telegram.me/etr_tfs_bot'>
-                @{<text>@etr_tfs_bot</text>}
+                @@etr_tfs_bot
             </a>
         </div>
     </div>
