--- a/src/TfsBot.Application/Views/Home/Index.cshtml
+++ b/src/TfsBot.Application/Views/Home/Index.cshtml
@@ -39,9 +39,16 @@
                 <img src="https://dev.botframework.com/Client/Images/Add-To-Skype-Buttons.png">
             </a>
         </div>
+        <br/>
         <div>
-            <a href='https://telegram.me/etr_tfs_bot'>
-                @@etr_tfs_bot
+            <a href='https://telegram.me/etr_tfs_bot' style="
+	                                                    background-color: #fff;
+	                                                    border-radius: 10px;
+	                                                    padding: 10px;
+	                                                    color: #728A9A;
+	                                                    text-decoration: none;
+                                                    ">
+               telegram.me/etr_tfs_bot
             </a>
         </div>
     </div>
